<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/main_navi_main" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/main_navi_tip" />
         <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/main_navi_setting" />-->
    </group>

    <item android:title="@string/main_navi_Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_navi_share" />

        </menu>
    </item>

</menu>
