<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/burn_mode_select_title"
        style="@style/text_common_style"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/get_mp3_file_dialog" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/get_mp3_file_dialog_tip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/get_mp3_ok"
            style="@style/login_btn_style"
            android:layout_weight="1"
            android:text="@string/title_activity_login_ok" />

        <Button
            android:id="@+id/get_mp3_no"
            style="@style/login_btn_style"
            android:layout_weight="1"
            android:text="@string/title_activity_login_no" />
    </LinearLayout>
</LinearLayout>