<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/burn_mode_select_title"
        style="@style/text_common_style"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/title_activity_login_tip" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />
    <TextView
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_activity_login_tip1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/login_ok"
            android:layout_weight="1"
            style="@style/login_btn_style"
            android:text="@string/title_activity_login_ok"/>
        <Button
            android:id="@+id/login_no"
            android:layout_weight="1"
            style="@style/login_btn_style"
            android:text="@string/title_activity_login_no"/>
    </LinearLayout>
</LinearLayout>