<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/single_line_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/edit_mode_name_edited"
            android:imeOptions="actionUnspecified"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="17sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_mode_cancle"
            style="@style/text_common_style"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/cancle"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/edit_mode_ok"
            style="@style/text_common_style"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>