<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/select_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/edit_mode"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/edit_burn_mode_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_check_selector" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/burn_mode_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/select_title"
        android:layout_marginTop="10dp"
        android:background="@color/ripple_color">

        <LinearLayout
            android:id="@+id/burn_edit_mode_lay"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <include layout="@layout/line_divider" />

            <RelativeLayout
                android:id="@+id/burn_mode_name_lay"
                style="@style/common_ripple_lay"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp">

                <TextView
                    android:id="@+id/mode_name"
                    style="@style/text_common_style"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:text="@string/edit_mode_name" />

                <TextView
                    android:id="@+id/mode_name_"
                    style="@style/text_common_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/edit_mode_name_edited" />
            </RelativeLayout>

            <include layout="@layout/line_divider" />

            <RelativeLayout
                android:id="@+id/burn_mode_music_lay"
                style="@style/common_ripple_lay">

                <TextView
                    android:id="@+id/burn_mode_music_name"
                    style="@style/text_common_style"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/edit_mode_music" />

                <ImageView
                    android:id="@+id/burn_mode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

                <TextView
                    android:id="@+id/burn_mode_song_size"
                    style="@style/text_common_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <include layout="@layout/line_divider" />


            <RelativeLayout
                android:id="@+id/burn_mode_time_lay"
                style="@style/common_ripple_lay"
                android:layout_marginTop="40dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dip"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/burn_mode_time"
                    style="@style/text_common_style"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/edit_mode_time" />


                <TextView
                    android:id="@+id/mode_name_time_select_"
                    style="@style/text_common_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/burn_mode_time_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

            </RelativeLayout>

            <include layout="@layout/line_divider" />

            <RelativeLayout
                android:id="@+id/burn_mode_record_time_lay"
                style="@style/common_ripple_lay">

                <TextView
                    android:id="@+id/burn_mode_record_name_txt"
                    style="@style/text_common_style"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/edit_mode_record_time" />

                <Switch
                    android:id="@+id/burn_mode_record_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:checked="true" />

                <TextView
                    android:id="@+id/burn_mode_record_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/burn_mode_had_burn_time"
                style="@style/common_ripple_lay"
                android:visibility="gone"
                tools:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dip"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/burn_mode_had_burn_time_txt"
                    style="@style/text_common_style"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/edit_mode_had_burn_time" />

                <TextView
                    android:id="@+id/burn_mode_had_burn_time_display_txt"
                    style="@style/text_common_style"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/edit_mode_had_burn_time_display"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>

            <include layout="@layout/line_divider" />

            <Button
                android:id="@+id/delete_burn_mode_button"
                style="@style/login_btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/delete_burn_mode"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>